--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.3
 entrypoints==0.3
 flake8==3.7.9
 Flask==1.1.2
+Flask-Admin==1.5.6
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
